# Emerald

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
assembly/: compileAndLink.ps1  msvcTest.asm  readme.md  test  test.asm
cmake/: project_defaults.cmake
docs/: Assemblers.md  CompilerOutline.md  ExpressionParsing.md  Grammar.md  InitialAssemblingAndLinking.md  Lexing.md  Linker.md  References.md  Setting-Up-WSL-In-CLion.md
lib/: CMakeLists.txt  CompilerError.hpp  Token.cpp  Token.hpp  Tokeniser.cpp  Tokeniser.hpp
programs/: prog1.emd
src/: ArenaAllocator.hpp  Assembler.cpp  Assembler.hpp  CMakeLists.txt  CompilerError.hpp  Generator.cpp  Generator.hpp  Linker.cpp  Linker.hpp  NodeVisitor.hpp  Nodes.hpp  Parser.cpp  Parser.hpp  Result.hpp  Tokeniser.cpp  Tokeniser.hpp  Tokens.hpp  Variable.hpp  assembly_builder.hpp  label_manager.hpp  linker.hpp  linux_linker.cpp  linux_linker.hpp  main.cpp  rules.hpp  variable.hpp  windows_linker.cpp  windows_linker.hpp
tests/: CMakeLists.txt  tokeniserTests.cpp
